Added MYSQL properties and app is up and running fine

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+spring.datasource.url = jdbc:mysql://localhost:3306/springbootdb?allowPublicKeyRetrieval=true&autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.username = user1
+spring.datasource.password = User@123
+
+spring.jpa.generate-ddl=true
+# Hibernate ddl auto (create, create-drop, update, validate, none)
+spring.jpa.hibernate.ddl-auto = update
